--- a/app/globals.css
+++ b/app/globals.css
@@ -40,3 +40,13 @@ a {
     color-scheme: dark;
   }
 } */
+body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+}
+
+main {
+  flex: 1; 
+}
