--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -54,3 +54,71 @@
   background-color: #f74730;
   margin-top: 4px;
 }
+
+
+.burger {
+    display: none; 
+    flex-direction: column;
+    gap: 6px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    z-index: 1001;
+    padding: 5px;
+}
+
+.line {
+    display: block;
+    width: 25px;
+    height: 2px;
+    background-color: #ff9f43; 
+    transition: 0.3s;
+}
+
+
+.nav {
+    display: flex;
+    gap: 20px;
+}
+
+@media (max-width: 768px) {
+    .burger {
+        display: flex; 
+    }
+
+    .nav {
+        position: fixed;
+        top: 0;
+        right: -100%; 
+        width: 100%;
+        height: 100vh;
+        background-color: #E4E5E6; 
+        display: flex;
+        flex-direction: column; 
+        justify-content: center;
+        align-items: center;
+        transition: 0.4s ease;
+        z-index: 1000;
+        gap: 30px;
+    }
+
+    .navActive {
+        right: 0; 
+    }
+
+    .link {
+        font-size: 24px;
+        text-decoration: none;
+        color: #333;
+    }
+
+  
+    .lineOpen .line:nth-child(1) { transform: translateY(8px) rotate(45deg); }
+    .lineOpen .line:nth-child(2) { opacity: 0; }
+    .lineOpen .line:nth-child(3) { transform: translateY(-8px) rotate(-45deg); }
+}
+
+.activeLink {
+    color: #ff9f43; 
+    font-weight: 600; 
+}
