--- a/components/RandomMeal/RandomMeal.module.css
+++ b/components/RandomMeal/RandomMeal.module.css
@@ -150,3 +150,17 @@
 }
 
 
+@media (max-width: 600px) {
+  .modal img {
+    max-width: 90vw; 
+  }
+  .modal{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 32px; 
+  box-sizing: border-box;
+  width: 100vw;
+  max-height: 90vh;
+  }
+}
