--- a/components/MealList/MealList.module.css
+++ b/components/MealList/MealList.module.css
@@ -53,6 +53,16 @@
   text-decoration: underline;
 }
 
+.favoriteBtn{
+cursor: pointer;
+  font-size: 24px;
+  border: none;
+  background: none;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(10px); }
   to { opacity: 1; transform: translateY(0); }
